﻿This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-05-15:

- Fixed an issue that prevented Unicode code points in $'...' strings and
  printf(1) formatters from being converted to the current locale. For
  example, if the locale on Linux/BSD/macOS is el_GR.ISO8859-7, echo $'\u03B1'
  now outputs a Greek lower-case alpha encoded in ISO8859-7 ($'\xE1').

2025-05-10:

- Fixed a memory leak in history expansion.

- Fixed a crash in 'fc -p'/'hist -p' that occurred when an incorrect history
  expansion followed a correct one in the command operands.

2025-05-08:

- [v1.1] Fixed: case modification expansions (added on 2025-04-23) were not
  properly subject to field splitting and pathname expansion if unquoted.

2025-05-05:

- [v1.1] grep(1) has been added as a path-bound built-in command. It is now
  available by default on ksh linked against dynamic libcmd, and may
  optionally be included in ksh linked against static libcmd. This grep
  supports eight kinds of regex, including sh and ksh glob patterns.

2025-05-02:

- [v1.1] Self-documentation output from any command's --man, --help, and
  other options is no longer written to standard error with exit status 2,
  but now goes to standard output and sets exit status 0. For an overview
  of self-documentation features, type: 'print "--???"'.

- When ksh is linked against the dynamic libshell/cmd/ast libraries (when
  building ksh on supported systems), all of the built-in commands from libcmd
  are now made available by default, bound to the virtual path /opt/ast/bin.

2025-04-29:

- [v1.1] The 'case' compound command now supports the ;;& control operator
  as on bash 4.0+. The ;;& operator falls through like ;& but executes the
  next matching list instead of simply executing the next list.

2025-04-27:
